fix alignment issue with caption

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -617,8 +617,13 @@ max-height: auto;
 }
 
 .todaright {
-  float: right;
   padding-right: 10px;
+}
+
+.team_icons {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 table, tr, td {
